--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://omer:omer123@cluster0.3bbo8qn.mongodb.net/omer?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
